Add Wordpress Import Features to Readme

--- a/readme
+++ b/readme
@@ -24,3 +24,24 @@ from file upload.
 
 ImportX has been developed with funding by Working Party,
 a Sydney based Digital Agency.
+
+---
+
+Wordpress XML File Documentation
+
+Working Features:
+
+1. Default MODX Template ID Config Setting 
+    Set all Imported resources to a MODX Template ID before the script runs features 2 & 3
+
+2. WP XML Template Name Mapping to MODX Template ID
+    Mapping Config Setting: default:2
+    XML value: 
+    <wp:meta_key>_wp_page_template</wp:meta_key>
+    <wp:meta_value><![CDATA[default]]></wp:meta_value>
+
+    will map this Resource to MODX Template 2
+
+3. Automatic Template Name Matching
+    Like the values above. if you have a MODX template named "default" it will be automatically assigned to the resource.
+
